--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,19 +1,26 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /app
 
-COPY ./ ./
+COPY . ./
 RUN dotnet restore
 RUN dotnet publish -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/runtime:6.0-bullseye-slim
+FROM mcr.microsoft.com/dotnet/runtime:8.0-bookworm-slim
 WORKDIR /app
 COPY --from=build-env /app/out ./
+
+USER root
+COPY templates/entrypoint.sh ./
+RUN chmod +x ./entrypoint.sh
+
+RUN { \
+    echo "module name : IdentityMapping"; \
+    echo "module version : 6.0.1"; \
+} > ./application.info
 
 RUN useradd -ms /bin/bash moduleuser
 USER moduleuser
 
-# LABEL org.opencontainers.image.source=https://github.com/Project-GAUDI/HttpServer
 LABEL org.opencontainers.image.description="IdentityMapping is an Azure IoT edge module that performs property assignment to messages."
-# LABEL org.opencontainers.image.licenses=MIT
 
-ENTRYPOINT ["dotnet", "IdentityMapping.dll"]
+ENTRYPOINT ["/app/entrypoint.sh"]
